--- a/roles/letsencrypt-certbot/defaults/main.yml
+++ b/roles/letsencrypt-certbot/defaults/main.yml
@@ -1,6 +1,8 @@
 ---
 # Configuration
-letsencrypt_domain_names: '["input.data-platform.example","schema-registry.data-platform.example"]' # If you use freemyip.com for domain names, put them here
+letsencrypt_domain_names: # If you use freemyip.com for domain names, put them here
+  - "input.data-platform.example"
+  - "schema-registry.data-platform.example"
 letsencrypt_notifications_email: "username@gmail.com"
 letsencrypt_truststore_file_name: "truststore.p12"
 letsencrypt_truststore_passwd: "Password_123"
