--- a/roles/basic/defaults/main.yml
+++ b/roles/basic/defaults/main.yml
@@ -2,3 +2,7 @@
 # Configuration
 basic_user_name: "username"
 basic_user_pass: "encrypted-password-see-ansible-user-module-docs"
+#basic_user_ssh_key: "~/.ssh/id_rsa"
+#basic_user_public_keys:
+#  - public_keys/user1.pub
+#  - public_keys/user2.pub
