--- a/roles/nifi/templates/bootstrap.conf
+++ b/roles/nifi/templates/bootstrap.conf
@@ -53,7 +53,7 @@ java.arg.7=-XX:ReservedCodeCacheSize=256m
 # the cache from filling up. The default code cache is defined by the Java version you are running, but can be as little as 32m.
 
 # An additional layer of protection comes by removing the comment on the following 2 lines:
-java.arg.8=-XX:CodeCacheMinimumFreeSpace=10m
+#java.arg.8=-XX:CodeCacheMinimumFreeSpace=10m # Causes Unrecognized VM option 'CodeCacheMinimumFreeSpace=10m' in JDK 11
 java.arg.9=-XX:+UseCodeCacheFlushing
 # This parameter establishes a boundary for how much of the code cache can be used before flushing of the code cache will occur
 # to prevent it from filling and resulting in the stoppage of the compiler.
