--- a/roles/nifi/defaults/main.yml
+++ b/roles/nifi/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
 # Installation
-nifi_package_mirror: "http://www-eu.apache.org/dist"
-nifi_version: "1.9.2"
+nifi_package_mirror: "https://archive.apache.org/dist"
+nifi_version: "1.19.0"
 
-nifi_archive_filename: "nifi-{{ nifi_version }}-bin.tar.gz"
+nifi_archive_filename: "nifi-{{ nifi_version }}-bin.zip"
 nifi_archive_source: "{{ nifi_package_mirror }}/nifi/{{ nifi_version }}/{{ nifi_archive_filename }}"
-nifi_archive_hash_sha256: "8d50bd1a0408878ab41a5fcd18d179e5a293e7d0280ddbe5098a4627aaacbff1"
+nifi_archive_hash_sha256: "54be4c13fa81a3fe4860a728288b79fadc1e122904b19f1279a12017412ebd1a"
 
 nifi_os_user_name: "nifi"
 nifi_os_group_name: "{{ nifi_os_user_name }}"
