--- a/roles/nifi/defaults/main.yml
+++ b/roles/nifi/defaults/main.yml
@@ -33,6 +33,9 @@ nifi_cluster_node_protocol_port: 11000
 #nifi_oauth_client_id: "1234567890.apps.googleusercontent.com"
 #nifi_oauth_client_secret: "OAuthSecret_123"
 
+# Properties encryption config, use here a value NiFi generates in nifi.properties after the first start
+nifi_sensitive_props_key: ""
+
 # API open ports
 #firewall_open_ports: # If you need to expose an external API, leave undefined if not needed
 #  - '1337'
