--- a/roles/nifi/templates/nifi.properties
+++ b/roles/nifi/templates/nifi.properties
@@ -148,7 +148,7 @@ nifi.web.proxy.context.path=
 nifi.web.proxy.host=
 
 # security properties #
-nifi.sensitive.props.key=
+nifi.sensitive.props.key={{ nifi_sensitive_props_key }}
 nifi.sensitive.props.key.protected=
 nifi.sensitive.props.algorithm=PBEWITHMD5AND256BITAES-CBC-OPENSSL
 nifi.sensitive.props.provider=BC
